[UI] Dropdown Nested Menu Arrow Alignment Fix
Fixes: #2219

--- a/src/clr-angular/popover/dropdown/_dropdown.clarity.scss
+++ b/src/clr-angular/popover/dropdown/_dropdown.clarity.scss
@@ -130,7 +130,7 @@
             }
 
             &.expandable {
-                $clr-dropdown-caret-xOffset: 0.333rem;
+                $clr-dropdown-caret-margin-top: 0.375rem;
 
                 margin-right: 1rem;
                 padding-right: 0.5rem;
@@ -140,10 +140,10 @@
                     float: right;
                     height: 0.5rem;
                     width: 0.5rem;
-                    transform: rotate(-90deg) translateX(-1 * $clr-dropdown-caret-xOffset);
+                    transform: rotate(-90deg);
                     background-image: generateCaretIcon();
                     @include icon-background-styles();
-                    margin: 0;
+                    margin-top: $clr-dropdown-caret-margin-top;
                 }
             }
 
@@ -188,9 +188,15 @@
         @media screen and (max-width: map-get($grid-breakpoints, sm)) {
             .btn,
             .dropdown-item {
+                $clr-dropdown-caret-margin-top: 0.5rem;
+
                 $adjusted_lineHeight: 1.5rem;
                 height: $adjusted_lineHeight;
                 line-height: $adjusted_lineHeight;
+
+                &.expandable::before {
+                    margin-top: $clr-dropdown-caret-margin-top;
+                }
             }
         }
 
